[package]
name = "get_address_by_ip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
actix-web = "4.0"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
url = "2.2"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"